Remove support for namespace as attribute for config in services.xml
Customers use 'name' attribute in config element with both namespace and name,
'namespace' is not documented and 'name' started requiring namespace in Vespa 6